# Projet3

./: Alfaro_Blanca_01_notebooknettoyage_20230623.ipynb  Alfaro_Blanca_1_notebook_nettoyage.ipynb  P3-notebook.ipynb  pyproject.toml
