[tool.poetry]
name = "projet3"
version = "0.1.0"
description = ""
authors = ["BlancaAlfaro <blanca.alfaro.merino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
seaborn = "^0.12.2"
missingno = "^0.5.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
